@@ -23,8 +23,9 @@ Imager release history.  Older releases can be found in Changes.old
    - The XS for i_map() and i_matrix_transform() now use the AV *
      typemap instead of rolling their own.
 
-   - The XS for i_poly_aa(), i_poly_aa_cfill(), i_transform() now use
-     a new T_AVARRAY typemap that greatly simplifies the XS code.
+   - The XS for i_poly_aa(), i_poly_aa_cfill(), i_transform() and
+     i_gradgen() now use a new T_AVARRAY typemap that greatly
+     simplifies the XS code.
 
    - some XS code formatting
 
